# YellowBelt

./: CMakeLists.txt  README.md
ArithmeticExpressionConstruction/: CMakeLists.txt  main.cpp
ArithmeticExpressionConstruction2/: CMakeLists.txt  main.cpp
AverageTemperature2/: CMakeLists.txt  main.cpp
BlockWeight/: CMakeLists.txt  main.cpp
BusManager/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
DemographicIndicators/: CMakeLists.txt  DemographicUtilities.h  main.cpp
ElementReference/: CMakeLists.txt  main.cpp
FigureSet/: CMakeLists.txt  main.cpp
Final/: CMakeLists.txt  comparison.h  comparison_node.cpp  comparison_node.h  condition_parser.cpp  condition_parser_test.cpp  database.cpp  database.h  database_test.cpp  date.cpp  date.h  date_comparison_node.cpp  date_comparison_node.h  date_test.cpp  empty_node.cpp  empty_node.h  event_comparison_node.cpp  event_comparison_node.h  logical_operation.h  logical_operation_node.cpp  logical_operation_node.h  main.cpp  main.h  node.cpp  node.h  token.cpp  token.h
FirstAndLastNames4/: CMakeLists.txt  main.cpp
GetDistinctRealRootCountFunctionTests/: CMakeLists.txt  main.cpp
GroupingStringsByPrefix/: CMakeLists.txt  main.cpp
GroupingStringsByPrefix2/: CMakeLists.txt  main.cpp
InheritanceByOwnHands/: CMakeLists.txt  main.cpp
IsPalindromTests/: CMakeLists.txt  main.cpp
IteratingThroughPermutations/: CMakeLists.txt  main.cpp
MatrixSummation/: CMakeLists.txt  main.cpp
MergeSort/: CMakeLists.txt  main.cpp
MergeSort2/: CMakeLists.txt  main.cpp
NotificationSender/: CMakeLists.txt  main.cpp
PersonTests/: CMakeLists.txt  Person.h  main.cpp
PersonalBudgetStarterPlusVersion/: CMakeLists.txt  main.cpp
PersonalBudgetStarterVersion/: CMakeLists.txt  main.cpp
PhoneNumber/: CMakeLists.txt  main.cpp  phone_number.cpp  phone_number.h
ProgramDecomposition/: CMakeLists.txt  main.cpp
RationalTests/: CMakeLists.txt  Rational.h  main.cpp
Rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.h
Refactoring/: CMakeLists.txt  main.cpp
RegionBase/: CMakeLists.txt  FindMaxRepetitionCount.h  Region.h  main.cpp
RemovingDuplicates/: CMakeLists.txt  main.cpp
SetPart/: CMakeLists.txt  main.cpp
SplittingIntoWords/: CMakeLists.txt  main.cpp
SquareEverything/: CMakeLists.txt  main.cpp
SumReverseSort/: CMakeLists.txt  main.cpp  sum_reverse_sort.cpp
TaskTracker/: CMakeLists.txt  TaskInfo.h  main.cpp
TestRunner/: CMakeLists.txt  TestRunner.cpp  TestRunner.h
TheNearestElementSearching/: CMakeLists.txt  main.cpp
VectorPart/: CMakeLists.txt  main.cpp
