cmake_minimum_required(VERSION 3.27)
project(YellowBelt)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

add_subdirectory(MatrixSummation)
add_subdirectory(AverageTemperature2)
add_subdirectory(BlockWeight)
add_subdirectory(RegionBase)
add_subdirectory(TaskTracker)
add_subdirectory(SquareEverything)
add_subdirectory(ElementReference)
add_subdirectory(ProgramDecomposition)
add_subdirectory(GetDistinctRealRootCountFunctionTests)
add_subdirectory(PersonTests)
add_subdirectory(RationalTests)
add_subdirectory(IsPalindromTests)
add_subdirectory(TestRunner)
add_subdirectory(SumReverseSort)
add_subdirectory(PhoneNumber)