add_executable(Final main.cpp
        condition_parser.cpp
        condition_parser.h
        condition_parser_test.cpp
        database.cpp
        database.h
        database_test.cpp
        date.cpp
        date.h
        date_test.cpp
        node.cpp
        node.h
        token.cpp
        token.h
        logical_operation.h
        comparison.h
)